gl33-master/src/test/deca/syntax/invalid/others/semiMethode.deca
/*
Test sur le manque de point virgule deca dans une fonction

Attention : si le fichier est modifié, il faut le vérifier à nouveau et
copier la sortie dans src/test/deca/valid/others/expected

Author : Tanguy Poinson
Date : 17/01/2021
*/

class MyClass{
  int myFunc()
  {
    print("Hello");
    println(" World");
    return 1
  }
}

{

}
